# forex_data

./: .gitignore  LICENSE  README.md  build_docs.sh  mypy.ini  pyproject.toml  setup.cfg
.circleci/: config.yml
.codebuild/: linux_pipe.yaml
.codecatalyst/workflows/: forex-data_masterWorkflow.yaml
.github/workflows/: docs.yml  release.yml
appconfig/: __init__.py  appconfig_template.yaml  data_config.yaml  template_config.yaml
cli/: fx_agg_app.py
docs/: DOCSTRING_UPDATES_SUMMARY.md  DOCUMENTATION_GUIDE.md  GITHUB_PAGES_SETUP.md  SPHINX_QUICK_REFERENCE.md  SPHINX_UPDATES_SUMMARY.md
docs/source/: changelog.rst  conf.py  configuration.rst  contributing.rst  examples.rst  forex_data.data_management.rst  forex_data.rst  index.rst  installation.rst  modules.rst  quickstart.rst
docs/source/_static/: custom.css
examples/: comparison_profiling_LocalDB.py  hist_data_manager.py  histdata_conditional_filter.py  histdata_db_manager.py  histdata_manager.py  realtime_data_manager.py
examples/historical/: compare_hist_connectors.py  comparison_profiling_LocalDB.py  histdata_conditional_filter.py  histdata_db_test_sanity_cache.py
examples/profiling/: compare_profiling_LocalDB.py  histdata_db_manager.py
examples/realtime/: realtime_twelvedata_connector.py
forex_data/: __init__.py
forex_data/config/: __init__.py  common.py  config_file.py
forex_data/data_management/: __init__.py  abs_data_manager.py  common.py  database.py  historicaldata.py  realtimedata.py  remoteconnector.py
forex_data/database/: __init__.py
forex_data/utils/: __init__.py  estimate_tz.py
forex_prediction/: __init__.py
forex_prediction/agent/: __init__.py  agent.py  raw_state.py
forex_prediction/config/: __init__.py  config_file.py
forex_prediction/data_management/: __init__.py  common.py  core_data_manager.py  data_manager.py  historicaldata.py  realtimedata.py
forex_prediction/database/: __init__.py
libs/tick_vault/: __init__.py  chunk.py  config.py  constants.py  decoder.py  download_worker.py  downloader.py  fetcher.py  logger.py  metadata.py  metadata_worker.py  reader.py  utils.py
notes/: ONGOING_STATE_NOTES.txt
pytest/: test_historical_data.py
src/: __init__.py  agent.py  data_manager.py
src/lib/: __init__.py  common.py  data_common_def.py  data_manager.py  histdatalib.py  historicaldata.py  realtimedata.py  realtimedatalib.py
test/: test_data_manager.py  test_hist_data_manager.py  test_realtime_data_manager.py
tests/: __init__.py  run_test_debug.py  test_ctrader_connector.py  test_dukascopy_connector.py  test_historical_data.py  test_historical_manager_concurrency.py  test_historical_manager_db.py  test_realtime_data.py  test_realtime_data_manager.py  test_realtime_twelvedata_connector.py
