[tool.poetry]
name = "forex_data"
version = "0.1.0"
description = "Tools to enable management of forex data on multiple timeframes at the same time, via historical data data provider or real time provider"
authors = ["Nicola Fiorato <fiorato.nicola@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "forex_data"}]

[tool.poetry.dependencies]
python = ">=3.9.*, <=3.10.13"
spyder-kernels = ">=2.5.0"
pyaml = "^21.10.1"
pandas = ">=2.0.0"
matplotlib = "^3.6.2"
requests = "^2.28.1"
mplfinance = "^0.12.9b7"
histdata = "^1.0"
polygon-api-client = "^1.5.0"
alpha-vantage = "^2.3.1"
dask = "^2023.4.0"
mpl-finance = "^0.10.1"
setuptools = "^69.0.2"
scipy = "^1.11.4"
pyarrow = "^14.0.2"
dotty-dict = {git = "https://github.com/nikfio/dotty_dict.git"}
polars = "^0.20.7"
awswrangler = {extras = ["redshift"], version = "^3.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
