[tool.poetry]
name = "forex_data_aggregator"
version = "0.1.4"
description = "Data aggregation for forex market data"
authors = ["Nicola Fiorato <fiorato.nicola@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "forex_data"}]

[tool.poetry.dependencies]
python = "~3.12"
pyaml = "^21.10.1"
pandas = ">=2.0.0"
matplotlib = ">=3.9.2"
requests = "^2.28.1"
mplfinance = "^0.12.9b7"
polygon-api-client = "^1.5.0"
alpha-vantage = "^2.3.1"
mpl-finance = "^0.10.1"
setuptools = "^69.0.2"
scipy = "^1.11.4"
pyarrow = ">=14.0.2"
polars = ">=0.20.7"
pytest = "^8.1.1"
loguru = "^0.7.2"
numpy  = "<2.0.0"
debugpy = "^1.8.5"
iteration-utilities = "^0.12.1"
bs4 = "^0.0.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pandas-stubs = "^2.2.3.241126"
pytest-mypy = "^0.10.3"
pytest-flake8 = "^1.3.0"
connectorx = "^0.4.3"
duckdb = "^1.3.1"
adbc-driver-sqlite = "^1.6.0"
dotty-dict = "^1.3.1"
pyinstrument = "^5.1.2"
holidays = "^0.89"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
sphinx = "^9.0.4"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
